# f1thebeast_ws

./: .gitignore  .gitmodules  CLAUDE.md  README.md
ekf_slam_map/0813-ver1/: map.pgm
ekf_slam_map/0813-ver2/: map.pgm
globalplanner/: convertToCW.py  onlymincurv.py
globalplanner/params/: onlymincurv.ini
learning/: learning_localplanner.py
minimum_curvature/: centerline_extracted.py  cur.py  map_1753945518.pgm  map_1753945518.yaml  map_1753950751.csv  slam_map_centerline_extract.py
rosbag_folder/08.07/rosbag-ekf-odom/: metadata.yaml
rosbag_folder/08.07/rosbag-ekf-odom-fast/: metadata.yaml
rosbag_folder/08.07/rosbag-ekf-odom-slow_2/: metadata.yaml
rosbag_folder/08.07/rosbag-new-0/: metadata.yaml
rosbag_folder/08.07/rosbag-new-1/: metadata.yaml
rosbag_folder/08.07/rosbag-new-fast-s0/: metadata.yaml
rosbag_folder/08.08/rosbag-08081607-ekf-odom-fast/: metadata.yaml
rosbag_folder/08.08/rosbag-08081607-ekf-odom-slow/: metadata.yaml
rosbag_folder/new_ekf_08.11/rosbag-0811-2114/: metadata.yaml
rosbag_folder/new_ekf_08.11/rosbag-0811-new-startpoint/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-noslam-fast-5s/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-noslam-obs/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-noslam-reverse-5s/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-noslamlidar/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-noslamlidar_stop10s/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-withslam-1turn-5s/: metadata.yaml
rosbag_folder/old-no-imu-cal/rosbag-withslam-3turn-5s/: metadata.yaml
slam-maps/07.31/: map_1753946037.pgm  map_1753946037.yaml  map_1753949973.pgm  map_1753949973.yaml
slam-maps/07.31/1turn_5s_rosbag/: map_1753950751.pgm  map_1753950751_centerline_with_curvature.csv
slam-maps/enhanced_map/: map_1753508174.pgm  map_1753508174.yaml  map_1753508345.pgm  map_1753508345.yaml  map_1753543475.pgm  map_1753543475.yaml  map_1753543682.pgm  map_1753543682.yaml
slam-maps/test/: map_1753431143.yaml  map_1753431158.yaml  map_1753431160.yaml  map_1753431164.yaml  map_1753431166.pgm  map_1753431166.yaml  map_1753431169.yaml  map_1753451378.pgm  map_1753451378.yaml
src/auto_tuning/evaluation_metrics/: metrics_analyzer.py  plot_trajectory.py
src/auto_tuning/include/: auto_tuning.hpp
src/auto_tuning/src/: auto_tuning.cpp
src/control/: CMakeLists.txt  package.xml
src/control/evaluation_metrics/: metrics_20250802_221306.csv  metrics_20250802_221325.csv  metrics_20250802_221426.csv  metrics_20250802_221452.csv  metrics_20250802_221719.csv  metrics_20250802_222956.csv  metrics_20250802_223407.csv  metrics_20250802_223424.csv  metrics_20250802_223445.csv  metrics_20250802_223507.csv  metrics_20250802_224335.csv  metrics_20250802_224637.csv  metrics_20250802_225222.csv  metrics_20250802_225959.csv  metrics_analyzer.py  metrics_summary.csv
src/control/include/: control.hpp
src/control/src/: control.cpp  control_node.cpp  visualize_global.cpp
src/control_ws/: README.md
src/control_ws/auto_tuning/: CMakeLists.txt  package.xml
src/control_ws/auto_tuning/include/: auto_tuning.hpp
src/control_ws/auto_tuning/src/: auto_tuning.cpp  auto_tuning_node.cpp  visualize_global.cpp
src/control_ws/control/: CMakeLists.txt
src/control_ws/control/evaluation_metrics/: metrics_analyzer.py
src/control_ws/control/include/: control.hpp  visualize_global_path.hpp
src/control_ws/control/src/: control.cpp  control_node.cpp  visualize_global.cpp  visualize_global_node.cpp
src/control_ws/control_real/: CMakeLists.txt  package.xml
src/control_ws/control_real/config/: controller.yaml  param.ini
src/control_ws/control_real/include/: control_real.hpp
src/control_ws/control_real/launch/: control_real_launch.py
src/control_ws/control_real/src/: control_real.cpp  control_real_node.cpp  util_csv.cpp  visualize_global.cpp
src/control_ws/control_sim/: CMakeLists.txt  package.xml
src/control_ws/control_sim/config/: param.ini
src/control_ws/control_sim/evaluation_metrics/: metrics_analyzer.py
src/control_ws/control_sim/include/: control_sim.hpp  visualize_global_path.hpp
src/control_ws/control_sim/src/: control_sim.cpp  control_sim_node.cpp  visualize_global.cpp
src/control_ws/custom_msgs/: CMakeLists.txt  package.xml
src/control_ws/custom_msgs/msg/: PathPoint.msg  PathPointArray.msg
src/f1tenth_gym_ros/config/: sim.yaml
src/f1tenth_system/f1tenth_stack/config/: slam_params.yaml  vesc.yaml
src/f1tenth_system/teleop_tools/key_teleop/key_teleop/: key_teleop.py
src/f1tenth_system/teleop_tools/mouse_teleop/mouse_teleop/: mouse_teleop.py
src/f1tenth_system/vesc/vesc_ackermann/: CMakeLists.txt
src/f1tenth_system/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  vesc_to_odom.cpp
src/full_stack/: CMakeLists.txt  package.xml
src/full_stack/src/: full_stack.cpp  full_stack_mpc.cpp  kinematic_mpc.py  kinematic_mpc_main.py  visualize_global.cpp
src/global_path_optimizer/: CMakeLists.txt  package.xml
src/global_path_optimizer/include/global_path_optimizer/: MinCurvOptimizer.hpp  MinCurvOptimizerQP.hpp
src/global_path_optimizer/inputs/tracks/: map_preprocessed_track.csv
src/global_path_optimizer/outputs/: global_path_qp_eigen.csv
src/global_path_optimizer/params/: onlymincurv.ini
src/global_path_optimizer/src/: MinCurvOptimizer.cpp  MinCurvOptimizerQP.cpp  path_optimizer_node.cpp
src/perception_ws/: README.md
src/perception_ws/range_libc/pywrapper/: RangeLibc.pyx  setup.py  simple_test.py  test.py
src/planning_ws/: README.md
src/slam_toolbox/config/: mapper_params_online_async.yaml
src/visualize_global_path_package/: CMakeLists.txt  package.xml
src/visualize_global_path_package/src/: visualize_global_node.cpp
